--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-authors = ["Craig Trim <craig@graffl.ai>"]
+authors = ["Craig Trim <craigtrim@gmail.com>"]
 description = "dbPedia Concept Linking and Redirect Analysis"
 name = "dbpedia"
 version = "0.1.0"
