--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ name = "dbpedia"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-baseblock = "^0.1.2"
+baseblock = "0.1.4"
 openpyxl = "^3.0.7"
 pandas = "^1.2.3"
 python = "3.8.5"
